test_cases/pass/p31.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT r
r=0%7
PRINT: r
END SCRIPT
