test_cases/fail/f52.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
CONTINUE
END SCRIPT